<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/white">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@color/bgCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_top" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenida"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <View
        android:id="@+id/view4"
        android:layout_width="300dp"
        android:layout_height="156dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_bg_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.238"
        app:srcCompat="@drawable/mujeroferta" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajePromo01"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/mensajePromo02"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/mensajePromo03"
        android:textColor="@color/yellow"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <View
        android:id="@+id/view5"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_bg_cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgcategoria"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/categoriaRopa"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <View
        android:id="@+id/categoriaRopa"
        android:layout_width="128dp"
        android:layout_height="171dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/rounded_bg_cyan"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:layout_constraintVertical_bias="0.488" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="123dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="@+id/categoriaRopa"
        app:layout_constraintEnd_toEndOf="@+id/categoriaRopa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/categoriaRopa"
        app:layout_constraintTop_toTopOf="@+id/categoriaRopa"
        app:layout_constraintVertical_bias="0.302"
        app:srcCompat="@drawable/ropa" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria01"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/categoriaRopa"
        app:layout_constraintVertical_bias="0.307" />

    <View
        android:id="@+id/categoriaTecnologia"
        android:layout_width="128dp"
        android:layout_height="171dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_bg_cyan"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/categoriaRopa"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.029" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="111dp"
        android:layout_height="167dp"
        app:layout_constraintBottom_toBottomOf="@+id/categoriaTecnologia"
        app:layout_constraintEnd_toEndOf="@+id/categoriaTecnologia"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/categoriaTecnologia"
        app:layout_constraintTop_toTopOf="@+id/categoriaTecnologia"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tecnologia" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria02"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/categoriaTecnologia"
        app:layout_constraintVertical_bias="0.307" />

    <ImageView
        android:id="@+id/imgOut"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/out" />


</androidx.constraintlayout.widget.ConstraintLayout>